--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -8,7 +8,7 @@
     android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
     android:backgroundTint="@color/cardView"
-    tools:context=".MainActivity">
+    tools:context=".Main.MainActivity">
 
     <RelativeLayout
         android:layout_width="wrap_content"
